@@ -328,15 +328,6 @@
                 </plugins>
             </build>
         </profile>
-        <profile>
-            <id>java9</id>
-            <activation>
-                <jdk>9</jdk>
-            </activation>
-            <properties>
-                <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
-            </properties>
-        </profile>
     </profiles>
 
 </project>
